[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/tower/internal tower tiles bg.png" type="Texture" id=1]
[ext_resource path="res://Game Play/Boss Level/BossLevel.gd" type="Script" id=2]
[ext_resource path="res://sprites/tower/transparent wall.png" type="Texture" id=3]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=5]
[ext_resource path="res://Game Play/Normal Level/TowerBricks.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/buttons or icons/rectangular button.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons or icons/explanation button.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons or icons/retry button.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=10]
[ext_resource path="res://Player/King.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game Play/Boss Level/HeartBar.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/tower/closed  boss level door.png" type="Texture" id=13]
[ext_resource path="res://sprites/tower/open boss level door.png" type="Texture" id=14]
[ext_resource path="res://sprites/buttons or icons/home icon.png" type="Texture" id=15]
[ext_resource path="res://sprites/character/monster/monster_alive.png" type="Texture" id=16]
[ext_resource path="res://sprites/character/monster/monster_dead.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.4409, 144.539 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 111.389, 127.707 )

[node name="BossLevel" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TowerBackground" type="TextureRect" parent="."]
margin_left = -1.49829
margin_top = 2.0
margin_right = 1917.5
margin_bottom = 1082.0
rect_pivot_offset = Vector2( 660.767, 391.28 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerBricks3" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 736.877, 1030.94 )

[node name="TowerBricks4" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1034.18, 1030.94 )

[node name="TowerBricks5" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1612.13, 1030.94 )

[node name="TowerBricks6" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1902.3, 1028.56 )

[node name="TowerBricks7" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1321.97, 1033.31 )

[node name="TowerBricks2" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 439.575, 1028.56 )

[node name="TowerBricks" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 149.408, 1030.94 )

[node name="TowerBricks8" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 80.4344, 957.204 )

[node name="TowerBricks9" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 375.358, 954.826 )

[node name="TowerBricks10" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 660.767, 954.826 )

[node name="TowerBricks11" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 955.691, 954.826 )

[node name="TowerBricks12" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1248.24, 957.204 )

[node name="TowerBricks13" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1545.54, 954.826 )

[node name="TowerBricks14" parent="TowerBackground" instance=ExtResource( 6 )]
position = Vector2( 1838.09, 954.826 )

[node name="Barrier1" type="StaticBody2D" parent="TowerBackground"]
pause_mode = 2
position = Vector2( 1450.72, 337.887 )

[node name="Sprite" type="Sprite" parent="TowerBackground/Barrier1"]
pause_mode = 2
position = Vector2( -824.171, 447.085 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerBackground/Barrier1"]
pause_mode = 2
position = Vector2( -823.608, 434.741 )
shape = SubResource( 1 )

[node name="Barrier2" type="StaticBody2D" parent="TowerBackground"]
pause_mode = 2
position = Vector2( 1450.72, 337.887 )

[node name="Sprite" type="Sprite" parent="TowerBackground/Barrier2"]
pause_mode = 2
position = Vector2( -969.077, 447.493 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerBackground/Barrier2"]
pause_mode = 2
position = Vector2( -958.424, 438.513 )
shape = SubResource( 1 )

[node name="King" parent="." instance=ExtResource( 11 )]
pause_mode = 2
position = Vector2( 545.232, 841.167 )

[node name="Timer" type="Label" parent="."]
margin_left = 1674.0
margin_top = 32.0
margin_right = 1782.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 12 )]
margin_left = 485.728
margin_top = 679.182
margin_right = 650.728
margin_bottom = 734.182

[node name="Question" type="TextureRect" parent="."]
margin_left = 132.591
margin_top = 26.591
margin_right = 1704.59
margin_bottom = 300.591
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QnNum" type="Label" parent="Question"]
margin_left = 109.0
margin_top = 32.0034
margin_right = 408.0
margin_bottom = 91.0034
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QnBody" type="Label" parent="Question"]
margin_left = 119.003
margin_top = 91.5118
margin_right = 1447.0
margin_bottom = 228.512
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Control" parent="Question"]
margin_right = 40.0
margin_bottom = 40.0

[node name="OptionA" type="TextureButton" parent="Question/Options"]
margin_left = 163.0
margin_top = 312.0
margin_right = 358.0
margin_bottom = 402.0
rect_pivot_offset = Vector2( 152.141, 45 )
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionAText" type="Label" parent="Question/Options/OptionA"]
margin_left = 22.0
margin_top = 18.0
margin_right = 173.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionB" type="TextureButton" parent="Question/Options"]
margin_left = 503.116
margin_top = 312.0
margin_right = 698.116
margin_bottom = 402.0
rect_pivot_offset = Vector2( 152.141, 45 )
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBText" type="Label" parent="Question/Options/OptionB"]
margin_left = 22.0
margin_top = 18.0
margin_right = 173.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionC" type="TextureButton" parent="Question/Options"]
margin_left = 846.228
margin_top = 312.0
margin_right = 1041.23
margin_bottom = 402.0
rect_pivot_offset = Vector2( 152.141, 45 )
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionCText" type="Label" parent="Question/Options/OptionC"]
margin_left = 22.0
margin_top = 18.0
margin_right = 173.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionD" type="TextureButton" parent="Question/Options"]
margin_left = 1190.54
margin_top = 312.0
margin_right = 1385.54
margin_bottom = 402.0
rect_pivot_offset = Vector2( 152.141, 45 )
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionDText" type="Label" parent="Question/Options/OptionD"]
margin_left = 22.0
margin_top = 18.0
margin_right = 173.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsMsg" type="TextureButton" parent="Question"]
margin_left = 592.184
margin_top = 442.409
margin_right = 1059.18
margin_bottom = 581.409
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsMsgText" type="Label" parent="Question/AnsMsg"]
margin_left = 64.3181
margin_top = 33.5457
margin_right = 409.318
margin_bottom = 99.5457
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBossMsg" type="TextureButton" parent="Question"]
margin_left = 482.273
margin_top = 421.0
margin_right = 1156.27
margin_bottom = 598.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBossText" type="Label" parent="Question/EndBossMsg"]
margin_left = 52.0
margin_top = 56.0
margin_right = 625.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Question"]
pause_mode = 2
visible = false
margin_left = 863.361
margin_top = 656.238
margin_right = 954.361
margin_bottom = 729.238
rect_rotation = -180.0
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextText" type="Label" parent="Question"]
visible = false
margin_left = 750.177
margin_top = 650.235
margin_right = 901.177
margin_bottom = 709.235
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Next"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsButton" type="TextureButton" parent="Question"]
pause_mode = 2
margin_left = 787.587
margin_top = 610.299
margin_right = 871.587
margin_bottom = 695.299
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsText" type="Label" parent="Question"]
margin_left = 755.686
margin_top = 678.191
margin_right = 906.686
margin_bottom = 737.191
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Solution"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossLvlDoorClosed" type="StaticBody2D" parent="."]
pause_mode = 2
position = Vector2( 1726.86, 826.163 )
scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="BossLvlDoorClosed"]
pause_mode = 2
position = Vector2( -26.9391, -20.8457 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossLvlDoorClosed"]
pause_mode = 2
position = Vector2( -18.9211, -30.4668 )
shape = SubResource( 3 )

[node name="BossLvlDoorOpen" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 1602.0
margin_top = 698.0
margin_right = 1810.0
margin_bottom = 936.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossLvlSolution" type="TextureButton" parent="."]
visible = false
margin_left = 165.5
margin_top = 32.6818
margin_right = 1715.5
margin_bottom = 634.682
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossSolutionText" type="Label" parent="BossLvlSolution"]
margin_left = 124.0
margin_top = 101.0
margin_right = 1431.0
margin_bottom = 510.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="BossLvlSolution"]
margin_left = 114.0
margin_top = 93.0
margin_right = 554.0
margin_bottom = 232.0
rect_scale = Vector2( 3, 3 )
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_alive" type="Sprite" parent="."]
position = Vector2( 1519.6, 836.195 )
scale = Vector2( 0.312369, 0.311663 )
texture = ExtResource( 16 )

[node name="monster_dead" type="Sprite" parent="."]
position = Vector2( 1520.6, 898.195 )
scale = Vector2( 0.363333, 0.221153 )
texture = ExtResource( 17 )

[node name="GameOver" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.82837
margin_top = 7.07104
margin_right = 2.82837
margin_bottom = 7.07104
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="GameOver"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -33.0
margin_right = 172.5
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="GameOver"]
pause_mode = 2
margin_left = 1015.83
margin_top = 596.829
margin_right = 1097.83
margin_bottom = 676.829
texture_normal = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitText" type="Label" parent="GameOver/QuitButton"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.2721
margin_top = 51.0374
margin_right = 63.7279
margin_bottom = 90.0374
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="TextureButton" parent="GameOver"]
pause_mode = 2
margin_left = 859.0
margin_top = 601.0
margin_right = 941.0
margin_bottom = 682.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryText" type="Label" parent="GameOver/RetryButton"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.4962
margin_top = 46.7384
margin_right = 63.5038
margin_bottom = 85.7384
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Retry"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Question/Options/OptionA" to="." method="_on_OptionA_pressed"]
[connection signal="pressed" from="Question/Options/OptionB" to="." method="_on_OptionB_pressed"]
[connection signal="pressed" from="Question/Options/OptionC" to="." method="_on_OptionC_pressed"]
[connection signal="pressed" from="Question/Options/OptionD" to="." method="_on_OptionD_pressed"]
[connection signal="pressed" from="Question/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Question/AnsButton" to="." method="_on_AnsButton_pressed"]
[connection signal="pressed" from="BossLvlDoorOpen" to="." method="_on_BossLvlDoorOpen_pressed"]
[connection signal="pressed" from="GameOver/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="GameOver/RetryButton" to="." method="_on_RetryButton_pressed"]
